# m3-regolith

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  methodology.md  roadmap.md
notebooks/: exploration.ipynb
scripts/: make_feature_maps.py  qa_plot_band_detection.py  run_fe_al_report.py  run_feature_extraction.py  run_pipeline.py  run_preprocessing.py  run_training.py  run_unsupervised_clustering.py
scripts/dev/: train_synthetic_baseline.py
src/lunar_m3/: __init__.py
src/lunar_m3/data_loading/: __init__.py  m3_loader.py  pds3_envi.py
src/lunar_m3/dev/: synthetic.py
src/lunar_m3/features/: __init__.py  band_features.py  feature_pipeline.py  spectral_indices.py
src/lunar_m3/models/: __init__.py  evaluation.py  gmm_clustering.py  inference.py  train_classifier.py
src/lunar_m3/preprocessing/: __init__.py  continuum_removal.py  denoising.py  instrument_join.py  normalization.py  smoothing.py
src/lunar_m3/validation/: __init__.py  sanity_checks.py  spectral_checks.py
src/lunar_m3/visualization/: __init__.py  heatmaps.py  mineral_maps.py  spectra_plotter.py
tests/: test_clustering.py  test_features.py  test_loader.py  test_models.py  test_preprocessing.py  test_science_validation.py
